# rag-3w-cot

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
samples/: rag_3w_cot_pipeline.py
samples/data/: questions.json  true_answers.json
samples/data/.cache/.vectorstore/157754d77c089153ed7681511abd2562/data.vectorstore/: index.faiss  index.pkl
src/rag_3w_cot/: settings.py  utils.py
src/rag_3w_cot/dictionaries/: __init__.py  base.py  financial_terms.py
src/rag_3w_cot/embeddings/: __init__.py  factory.py
src/rag_3w_cot/evaluations/: __init__.py  base.py  bert_score.py  cosine_similarity.py  embedding_cosine_similarity.py  exact_match.py  rouge_score.py
src/rag_3w_cot/llms/: __init__.py  base.py  huggingface.py  openai.py
src/rag_3w_cot/models/: __init__.py  answer.py  document.py  query.py
src/rag_3w_cot/pipelines/: __init__.py  base.py  cot.py
src/rag_3w_cot/processors/: __init__.py  base.py  document.py  query.py
src/rag_3w_cot/prompts/: __init__.py  base.py  cot.py  financial.py  generic.py  numerical.py
src/rag_3w_cot/prompts/markdown/: financial_system_prompt.md  financial_user_prompt.md  generic_short_system_prompt.md  generic_system_prompt.md  generic_user_prompt.md  processing_numerical_normalization_system_prompt.md  processing_numerical_normalization_user_prompt.md
src/rag_3w_cot/prompts/markdown/cot/: step_1_cot.md  step_2_formatting.md  step_3_schema_parsing.md
src/rag_3w_cot/vectorstores/: __init__.py  base.py  ensemble_faiss_bm25.py  faiss.py
